--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "d3-scale": "^1.0.6",
     "d3-selection": "^1.1.0",
     "d3-shape": "^1.2.0",
-    "poloniex-js": "brycedarling/poloniex-js",
+    "poloniex-js": "https://github.com/brycedarling/poloniex-js",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
